# FairGrowerBot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  QWEN.md  README.md  ROADMAP.md  config.py  database.py  fairdick.db  group.py  handlers.py  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml
deploy/: fairdickbot.service  install-service.sh  upgrade.sh
game/: __init__.py  boss.py  character.py  classes.py  dungeon.py  economy.py  expeditions.py  leveling.py  loot.py
tests/: test_boss.py  test_database.py  test_dungeon.py  test_economy.py  test_expeditions.py  test_game.py  test_handlers.py  test_utils.py
